k8s-practice-02-2026/kubernetes-assignment-2/assignment-5/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
