k8s-practice-02-2026/kubernetes-assignment-2/assignment-5/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: load-balancer
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
